Fixed h1 on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,7 +111,7 @@ body p {
   }
 
   h1 {
-  	font-size: 80%; 
+  	font-size: 80vw; 
   }
 
   #myDesigns {
